--- a/MsgApp/MsgApp.csproj
+++ b/MsgApp/MsgApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-windows10.0.19041</TargetFrameworks> <!--net6.0-android;net6.0-ios;net6.0-maccatalyst; -->
+		<TargetFrameworks>net6.0-windows10.0.19041;</TargetFrameworks> <!--net6.0-android;net6.0-ios;net6.0-maccatalyst; net6.0-ios;net6.0-windows10.0.19041-->
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) and '$(MSBuildRuntimeType)' == 'Full'">$(TargetFrameworks);</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<RootNamespace>MsgApp</RootNamespace>
@@ -26,6 +26,7 @@
 		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">21.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</TargetPlatformMinVersion>
+		<Configurations>Debug;Release</Configurations>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -49,20 +50,32 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Remove="Pages\MessageDialog.xaml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Pages\MessageDialog.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <PackageReference Include="EntityFramework" Version="6.4.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-	  <PackageReference Include="sqlite-net" Version="1.6.292" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\MsgApp_Server\MsgApp_Server.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Compile Update="Pages\AddContact.xaml.cs">
 	    <DependentUpon>AddContact.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Pages\MessageDialog.xaml.cs">
+	    <DependentUpon>MessageDialog.xaml</DependentUpon>
 	  </Compile>
 	  <Compile Update="Pages\SetupPage.xaml.cs">
 	    <DependentUpon>SetupPage.xaml</DependentUpon>
